[gd_scene load_steps=6 format=3 uid="uid://csntv24xopwst"]

[ext_resource type="Script" path="res://scripts/UI/LobbyUI.gd" id="1_tndxs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oq0fw"]
bg_color = Color(0.05, 0.05, 0.05, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbg0w"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45nrj"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1i5b1"]
bg_color = Color(0.08, 0.08, 0.08, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="LobbyUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tndxs")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="HeaderPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oq0fw")

[node name="LobbyTitle" type="Label" parent="HeaderPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "游戏大厅"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoomCode" type="Label" parent="HeaderPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -35.0
offset_right = 150.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "房间代码: ABC123"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayersPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -200.0
offset_right = 320.0
offset_bottom = 200.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oq0fw")

[node name="TitleLabel" type="Label" parent="PlayersPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "玩家列表"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerList" type="VBoxContainer" parent="PlayersPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 50.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ChatPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -200.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oq0fw")

[node name="TitleLabel" type="Label" parent="ChatPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "聊天"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChatHistory" type="TextEdit" parent="ChatPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 50.0
offset_right = -10.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1i5b1")
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[node name="ChatInput" type="LineEdit" parent="ChatPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = -70.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "输入消息..."

[node name="SendButton" type="Button" parent="ChatPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "发送"

[node name="ControlsPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -70.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="ControlsPanel"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jbg0w")
theme_override_styles/hover = SubResource("StyleBoxFlat_45nrj")
text = "开始游戏"

[node name="ReadyButton" type="Button" parent="ControlsPanel"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jbg0w")
theme_override_styles/hover = SubResource("StyleBoxFlat_45nrj")
text = "准备"

[node name="RoleButton" type="Button" parent="ControlsPanel"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jbg0w")
theme_override_styles/hover = SubResource("StyleBoxFlat_45nrj")
text = "角色: 幸存者"

[node name="BackButton" type="Button" parent="ControlsPanel"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jbg0w")
theme_override_styles/hover = SubResource("StyleBoxFlat_45nrj")
text = "返回" 